# VoteBot

./: .env_example  .gitignore  README.md  config.py  database.py  logger.py  main.py  pyproject.toml
app/: bot_service.py  db_service.py  handlers.py  keyboards.py  schema.py
