[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
autoflake = "^2.3.1"
sentry-sdk = "^2.12.0"
python-json-logger = "^2.0.7"
aiohttp-socks = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = false
imports = ["app"]